# basic_state_estimator

./: CMakeLists.txt  neovim.json  package.xml
include/basic_state_estimator/: basic_state_estimator.hpp
include/basic_state_estimator/plugins/: state_estimator_plugin_base.hpp  state_estimator_plugin_ground_truth.hpp  state_estimator_plugin_mocap.hpp  state_estimator_plugin_odom_only.hpp
launch/: basic_state_estimator_launch.py
src/: basic_state_estimator.cpp  basic_state_estimator_node.cpp  mocap_state_estimator_node.cpp
tests/: plugin_test.cpp
